# scrolling-map

./: .flaskenv  .gitignore  Procfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js
app/: __init__.py  action_handler.py  authenticator.py  constants.py  database.py  definitions.py  handler.py  helpers.py  maps.py  models.py  movement.py  objects.py  routes.py  sender.py
app/db/: test.db
app/entity/: player.py
app/resources/: entities.json  maps.json  portals.json  tiles.json
app/static/: bundle.js  game.css  game.js
app/templates/: index.html
game/: __init__.py  authenticator.py  constants.py  database.py  definitions.py  handler.py  helpers.py  models.py  movement.py  objects.py  routes.py  sender.py
game/db/: test.db
game/js/: game.js  input.js  settings.js
game/resources/: maps.json
game/static/: bundle.js
js/: draw.js  game.js  input.js  map.js  player.js  settings.js
tests/: test_helpers.py
tools/: mapper.py
