[tool.poetry]
name = "scrolling-map"
version = "0.1.0"
description = ""
authors = ["Chris <csnow@live.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-SocketIO = "4.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
